# allthingsfintech

./: CMakeLists.txt  README.md  index.html  params.json
nbproject/: Package-Default.bash  configurations.xml  project.xml
nbproject/private/: Default.properties  configurations.xml
src/: main.cpp
